samples/_failures_safe/1761554235_e45a7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b9f557e.c: In function ‘main’:
./samples/SAFE/__tmp_7b9f557e.c:152:50: error: ‘struct compression_result’ has no member named ‘compressed’; did you mean ‘compressed_size’?
  152 |         if (result.compressed_size > 0 && result.compressed
      |                                                  ^~~~~~~~~~
      |                                                  compressed_size
./samples/SAFE/__tmp_7b9f557e.c:152:60: error: expected ‘)’ at end of input
  152 |         if (result.compressed_size > 0 && result.compressed
      |            ~                                               ^
      |                                                            )
./samples/SAFE/__tmp_7b9f557e.c:152:9: error: expected declaration or statement at end of input
  152 |         if (result.compressed_size > 0 && result.compressed
      |         ^~
./samples/SAFE/__tmp_7b9f557e.c:152:9: error: expected declaration or statement at end of input
